# UnderstandCaffe

./: CMakeLists.txt  README.md  main.cpp
include/: adidas.h  nike.h  parts.h  product.h  product_factory.h
src/: adidas.cpp  nike.cpp  understandLayerFactory.cpp
